test2-2023-05-23.log
regress/test2.fir:247424:17: error: use of unknown declaration 'validif'
    tmp20070 <= validif(head(UInt<3>(6), 1), SInt<24>("b-11111101000010001010101"))
                ^
===-------------------------------------------------------------------------===
                         ... Execution time report ...
===-------------------------------------------------------------------------===
  Total Execution Time: 1.5742 seconds

  ----Wall Time----  ----Name----
    1.5722 ( 99.9%)  FIR Parser
    0.0000 (  0.0%)    Parse annotations
    0.0000 (  0.0%)    Parse OMIR
    1.4807 ( 94.1%)    Parse modules
    0.0020 (  0.1%)  Rest
    1.5742 (100.0%)  Total

{
  totalTime: 1.59,
  maxMemory: 165490688
}
